# optimizacion

./: .env.example  .gitignore  README.md  pyproject.toml
.playwright-mcp/: page-2026-05-28T15-03-46-500Z.yml  page-2026-05-28T15-05-45-843Z.yml  page-2026-05-28T15-06-32-522Z.yml  page-2026-05-28T15-06-53-790Z.yml  page-2026-05-28T15-07-05-059Z.yml  page-2026-05-28T15-07-18-027Z.yml  page-2026-05-28T15-25-17-124Z.yml  page-2026-05-28T15-28-38-491Z.yml  page-2026-05-28T15-30-39-788Z.yml  page-2026-05-28T15-32-22-870Z.yml  page-2026-05-28T15-32-51-192Z.yml
docs/: DESIGN.md  architecture_sdd.md  data_contract.md  master_plan.md  roadmap.md
docs/data/: README.md  business-knowledge.md  dataset-index.md  query-log.md
docs/phase_logs/: phase_0_terminal_log.md  phase_1_5_terminal_log.md  phase_1_terminal_log.md  phase_2_terminal_log.md  phase_3_terminal_log.md  phase_4_terminal_log.md  phase_5_terminal_log.md  phase_6_terminal_log.md
docs/phase_notes/: phase_0_design_and_setup.md  phase_1_5_streamlit_front.md  phase_1_data_pipeline.md  phase_2_diagnostics.md  phase_3_scoring.md  phase_4_scenarios.md  phase_5_optimization.md  phase_6_simulation.md
scripts/: build_features.py  generate_sample_data.py  run_data_validation.py  run_diagnostics.py  run_optimization.py  run_scenarios.py  run_scoring.py  run_simulation.py
src/slotting_optimization_engine/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_dashboard_data.py  test_data_generator.py  test_data_loading.py  test_data_validation.py  test_diagnostics_rules.py  (+6 more)
(+32 files in other folders)
