[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slotting-optimization-engine"
version = "0.1.0"
description = "Modular Python engine for slotting optimization in high-volume distribution centers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["slotting", "optimization", "warehouse", "distribution-center"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pandera>=0.18",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
streamlit = [
    "streamlit>=1.30",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["slotting_optimization_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
